// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/page/My Default 1`] = `
<div>
  <h1
    class="title"
  >
    マイページ
  </h1>
  <h2>
    会員情報
  </h2>
  <h3>
    ようこそ、
    テスト太郎
    さん
  </h3>
</div>
`;

exports[`Storyshots components/page/My Error 1`] = `
<div>
  <h1
    class="title"
  >
    マイページ
  </h1>
  <h2 />
  <h3>
    読み込みエラー
  </h3>
</div>
`;

exports[`Storyshots components/page/My Loading 1`] = `
<div>
  <h1
    class="title"
  >
    マイページ
  </h1>
  <h2 />
  <h3>
    読込中
  </h3>
</div>
`;
